@@ -1,7 +1,16 @@
 OpenDNSSEC 1.4.4rc1
 
+<<<<<<< HEAD
 * SUPPORT-114: libhsm: Optimize storage in HSM by deleting the public 
   key directly if SkipPublicKey is used [OPENDNSSEC-574].
+=======
+* OPENDNSSEC-457: ods-ksmutil: add restrict to the 'ods-ksmutil add zone',
+  restrict the  input and output parameter's type as dns/file.
+
+* OPENDNSSEC-358: ods-ksmutil: add support for 'ods-ksmutil key list'
+  command to filter on key type and state.Add support for key states GENERATE and DEAD.
+
+>>>>>>> Fix the crash in the strncmp when command returns no matching key as temp_zone is NULL
 * OPENDNSSEC-549: Signer Engine: Put NSEC3 records on empty non-terminals
   derived from unsigned delegations (be compatible with servers that are
   incompatible with RFC 5155 errata 3441).
